Mylapqn — Today at 17:03 Wtf má z-index úplně max Andrej — Today at 17:03 nemá žádnej Mylapqn — Today at 17:03 Tak to bysme měli otevřít ticket v bug trackeru Andrej — Today at 17:04 já tam prostě přidám z-index 1000 a bude

--- a/style.css
+++ b/style.css
@@ -644,6 +644,8 @@ body {
     justify-content: center;
     transform: scale(1) rotate(0);
     transition: transform 0.3s;
+
+    z-index: 1000;
 }
 
 .item:hover {
